--- a/src/Catty/ViewController/MediaLibrary/ContentViews/LibrarySoundCollectionViewCell.xib
+++ b/src/Catty/ViewController/MediaLibrary/ContentViews/LibrarySoundCollectionViewCell.xib
@@ -29,7 +29,7 @@
                         <state key="normal" image="ic_media_play"/>
                         <state key="selected" image="ic_media_pause"/>
                         <connections>
-                            <action selector="playOrStop" destination="gTV-IL-0wX" eventType="touchUpInside" id="BS0-Hf-all"/>
+                            <action selector="playOrStopButtonPressed" destination="gTV-IL-0wX" eventType="touchUpInside" id="BS0-Hf-all"/>
                         </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tNw-Gq-6Td">
