--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1482,32 +1482,11 @@
         <!--Project Detail Store View Controller-->
         <scene sceneID="9qo-sP-Szn">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="5oV-85-Xov" customClass="ProjectDetailStoreViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="7CA-Mb-E8z"/>
-                        <viewControllerLayoutGuide type="bottom" id="3qA-Jo-aw8"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="mCh-1r-EFp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qwE-Ve-7jz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="qwE-Ve-7jz" secondAttribute="trailing" id="AWh-1p-zS3"/>
-                            <constraint firstItem="qwE-Ve-7jz" firstAttribute="leading" secondItem="mCh-1r-EFp" secondAttribute="leading" id="RMK-FC-gMe"/>
-                            <constraint firstItem="3qA-Jo-aw8" firstAttribute="top" secondItem="qwE-Ve-7jz" secondAttribute="bottom" id="SbI-JE-Pt6"/>
-                            <constraint firstItem="qwE-Ve-7jz" firstAttribute="top" secondItem="7CA-Mb-E8z" secondAttribute="bottom" id="TGS-2e-gF6"/>
-                        </constraints>
-                    </view>
+                <viewController hidesBottomBarWhenPushed="YES" id="5oV-85-Xov" customClass="ProjectDetailStoreViewController" customModule="Pocket_Code" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="eyi-rm-zZ0"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="scrollViewOutlet" destination="qwE-Ve-7jz" id="s6T-uY-bi7"/>
                         <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="mUB-CR-2KD"/>
                     </connections>
                 </viewController>
@@ -2308,7 +2287,7 @@
         <image name="top_charts" width="51" height="46"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Gbh-WU-doT"/>
-        <segue reference="1kj-7D-Va7"/>
+        <segue reference="83p-dA-kpt"/>
+        <segue reference="mUB-CR-2KD"/>
     </inferredMetricsTieBreakers>
 </document>
