--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1362,12 +1362,11 @@
                     <connections>
                         <outlet property="SearchStoreTableView" destination="wOw-Ve-PBF" id="UpX-nm-JZa"/>
                         <outlet property="searchBar" destination="2Ht-uC-rkW" id="PZ9-ZW-OxV"/>
-                        <segue destination="5oV-85-Xov" kind="show" identifier="segueToProjectDetail" id="Gbh-WU-doT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kRY-CN-4Pq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3432" y="-801"/>
+            <point key="canvasLocation" x="-3433" y="-698"/>
         </scene>
         <!--Help Web View Controller-->
         <scene sceneID="7zO-Ww-9xa">
@@ -1378,15 +1377,15 @@
                         <viewControllerLayoutGuide type="bottom" id="aRr-mg-UEb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yiR-18-InU">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HWU-un-tSt">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWx-dQ-BHj">
-                                <rect key="frame" x="16" y="0.0" width="343" height="20"/>
+                                <rect key="frame" x="16" y="64" width="343" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="3Ve-NQ-pUz"/>
                                 </constraints>
@@ -1395,7 +1394,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1O1-zI-Ara">
-                                <rect key="frame" x="16" y="21" width="343" height="2"/>
+                                <rect key="frame" x="16" y="85" width="343" height="2"/>
                             </progressView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1472,27 +1471,12 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <segue destination="5oV-85-Xov" kind="show" identifier="segueToProjectDetail" id="83p-dA-kpt"/>
+                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="BCd-eT-nt5"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qpj-ch-Y40" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3431.25" y="-1527.4647887323943"/>
-        </scene>
-        <!--Project Detail Store View Controller-->
-        <scene sceneID="9qo-sP-Szn">
-            <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="5oV-85-Xov" customClass="ProjectDetailStoreViewController" customModule="Pocket_Code" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="eyi-rm-zZ0"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="mUB-CR-2KD"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dmN-gD-N9f" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2429" y="-1860"/>
         </scene>
         <!--Charts-->
         <scene sceneID="SIN-nq-kFT">
@@ -1580,7 +1564,6 @@
                     <connections>
                         <outlet property="ChartProjectsSegmentedControl" destination="jxg-mt-dvB" id="bR1-Hf-UdL"/>
                         <outlet property="ChartProjectsTableView" destination="fJr-Rh-VKf" id="9mV-oM-UFt"/>
-                        <segue destination="5oV-85-Xov" kind="show" identifier="segueToProjectDetail" id="5UD-6W-Ykq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Ln-bV-RG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2287,7 +2270,7 @@
         <image name="top_charts" width="51" height="46"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="83p-dA-kpt"/>
-        <segue reference="mUB-CR-2KD"/>
+        <segue reference="BCd-eT-nt5"/>
+        <segue reference="1kj-7D-Va7"/>
     </inferredMetricsTieBreakers>
 </document>
