--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -1369,10 +1369,10 @@
             </objects>
             <point key="canvasLocation" x="-3433" y="-698"/>
         </scene>
-        <!--Help Web View Controller-->
+        <!--In App Browser View Controller-->
         <scene sceneID="7zO-Ww-9xa">
             <objects>
-                <viewController id="IZh-b2-DYW" customClass="HelpWebViewController" customModule="Pocket_Code" sceneMemberID="viewController">
+                <viewController id="IZh-b2-DYW" customClass="InAppBrowserViewController" customModule="Pocket_Code" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LYJ-C4-dCk"/>
                         <viewControllerLayoutGuide type="bottom" id="aRr-mg-UEb"/>
