--- a/src/Catty/Storyboard+XIB/iPhone.storyboard
+++ b/src/Catty/Storyboard+XIB/iPhone.storyboard
@@ -705,7 +705,7 @@
                         <segue destination="BYa-g9-OiT" kind="show" identifier="segueToNewProject" id="aum-BR-x1G"/>
                         <segue destination="BYa-g9-OiT" kind="show" identifier="segueToContinue" id="1kj-7D-Va7"/>
                         <segue destination="39D-hJ-FD1" kind="show" identifier="segueToExplore" id="7JT-6F-5d1"/>
-                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="A6m-lh-qyH"/>
+                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToAppInBrowser" id="A6m-lh-qyH"/>
                         <segue destination="bYj-Ga-eye" kind="show" identifier="segueToUpload" id="d5M-d9-Nnc"/>
                     </connections>
                 </tableViewController>
@@ -1362,7 +1362,7 @@
                     <connections>
                         <outlet property="SearchStoreTableView" destination="wOw-Ve-PBF" id="UpX-nm-JZa"/>
                         <outlet property="searchBar" destination="2Ht-uC-rkW" id="PZ9-ZW-OxV"/>
-                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="VYA-dM-Eup"/>
+                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToAppInBrowser" id="VYA-dM-Eup"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kRY-CN-4Pq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1378,15 +1378,15 @@
                         <viewControllerLayoutGuide type="bottom" id="aRr-mg-UEb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yiR-18-InU">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HWU-un-tSt">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWx-dQ-BHj">
-                                <rect key="frame" x="16" y="64" width="343" height="20"/>
+                                <rect key="frame" x="16" y="0.0" width="343" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="3Ve-NQ-pUz"/>
                                 </constraints>
@@ -1395,7 +1395,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1O1-zI-Ara">
-                                <rect key="frame" x="16" y="85" width="343" height="2"/>
+                                <rect key="frame" x="16" y="21" width="343" height="2"/>
                             </progressView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1472,7 +1472,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="BCd-eT-nt5"/>
+                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToAppInBrowser" id="BCd-eT-nt5"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qpj-ch-Y40" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1565,7 +1565,7 @@
                     <connections>
                         <outlet property="ChartProjectsSegmentedControl" destination="jxg-mt-dvB" id="bR1-Hf-UdL"/>
                         <outlet property="ChartProjectsTableView" destination="fJr-Rh-VKf" id="9mV-oM-UFt"/>
-                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToHelp" id="rMo-c9-cnM"/>
+                        <segue destination="IZh-b2-DYW" kind="show" identifier="segueToAppInBrowser" id="rMo-c9-cnM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Ln-bV-RG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2272,7 +2272,7 @@
         <image name="top_charts" width="51" height="46"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VYA-dM-Eup"/>
+        <segue reference="A6m-lh-qyH"/>
         <segue reference="1kj-7D-Va7"/>
     </inferredMetricsTieBreakers>
 </document>
